# Geo-Openclaw

./: README.md
Geo-OpenClaw/: LICENSE  README.md  pyproject.toml
Geo-OpenClaw/config/: agents.yaml  qgis_profile.yaml  skills_manifest.yaml
Geo-OpenClaw/examples/: usage_examples.py
Geo-OpenClaw/examples/logs/: token_consumption_report.json
Geo-OpenClaw/skills/: __init__.py  buffer_analysis.py  reprojection.py
Geo-OpenClaw/src/: __init__.py
Geo-OpenClaw/src/agents/: architect_agent.py  environment_agent.py  executor_agent.py
Geo-OpenClaw/src/core/: feedback_loop.py  orchestrator.py  qgis_controller.py
Geo-OpenClaw/src/skills/: env_detection.py  geo_processing.py
Geo-OpenClaw/src/utils/: config.py  logger.py
Geo-OpenClaw/tests/: test_architect.py  test_environment.py  test_executor.py
